# Gartentraktor

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  app_config.h  control_logic.cpp  control_logic.h  io_pins.h  main.cpp  ota_server.cpp  ota_server.h  vesc_can.cpp  vesc_can.h  wifi_service.cpp  wifi_service.h
